<resources>
    <!-- Global -->
    <string name="app_name">Tapp</string>

    <!-- Login Page -->
    <string name="username">Username</string>
    <string name="username_caps">USERNAME</string>

    <string name="password">Password</string>
    <string name="password_caps">PASSWORD</string>

    <string name="email">Email</string>
    <string name="email_caps">EMAIL</string>

    <string name="forgot_password">Forgot Password?</string>

    <string name="log_in_caps">LOG IN</string>

    <string name="reset_caps">RESET MY PASSWORD</string>

    <string name="sign_up">NO ACCOUNT? SIGN UP!</string>

    <string name="sign_up_real">SIGN UP</string>

    <string name="terms">Accept terms and conditions</string>

    <string name="minimum_password">Password must be 6 or more characters long</string>

    <string name="auth_failed">Failed to authenticate</string>


    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="action_sign_in_short">Register</string>


    <!-- NFC List Activity -->

    <string name="nfc_tags_title">Your NFC Tags:</string>
    <string name="new_tag">Add New Tag</string>

    <!-- NFC Error -->
    <string name="no_nfc">This device has no NFC</string>
    <string name="nfc_disabled">This devices NFC is disabled</string>
    <string name="dismiss_nfc_error">Dismiss</string>

    <!-- NFC Triggered Activity -->
    <string name="nfc_unable_read">Unable to read the contents of the NFC</string>
    <string name="nfc_unable_parse">Unable to parse the contents of the NFC</string>
    <string name="tagName">Tag Name</string>
    <string name="tagLocation">Tag Location</string>
    <string name="saveNFC">Save NFC</string>
    <string name="taskList">Tasks</string>
    <string name="title_activity_study_features">StudyFeaturesActivity</string>

    <!-- MISC -->
    <string name="qrCodeGeneratorSeperator">`</string>
</resources>