<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginActivityView"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0C0C0"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/banner"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/t_logo"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginBottom="356dp"
        android:background="@android:color/white"
        android:contentDescription="@string/email_caps"
        android:ems="10"
        android:hint="@string/email_caps"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:background="@android:color/white"
        android:contentDescription="@string/username"
        android:fontFamily="sans-serif"
        android:hint="@string/username_caps"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="408dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginLeft="88dp"
        android:layout_marginBottom="172dp"
        android:background="@android:color/white"
        android:contentDescription="@string/password_caps"
        android:ems="10"
        android:hint="@string/password_caps"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


    <Button
        android:id="@+id/signUp"
    android:layout_width="230dp"
    android:layout_height="60dp"
    android:layout_marginBottom="80dp"
        android:textSize="18sp"
        android:background="@android:color/black"
    android:contentDescription="@string/sign_up_real"
    android:text="@string/sign_up_real"
    android:textAlignment="center"
    android:textColor="@android:color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.496"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent" />




</android.support.constraint.ConstraintLayout>