<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginActivityView"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0C0C0"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/banner"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/t_logo"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="80dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="228dp"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:contentDescription="@string/Username"
        android:fontFamily="sans-serif"
        android:hint="@string/username_caps"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="330dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:contentDescription="@string/email_caps"
        android:ems="10"
        android:hint="@string/email_caps"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.167" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="228dp"
        android:layout_height="69dp"
        android:background="@android:color/black"
        android:contentDescription="@string/reset_caps"
        android:text="@string/reset_caps"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.321" />

</android.support.constraint.ConstraintLayout>